feature: update x6 dag web

--- a/carp-ui/src/pages/Workspace/X6/dag-demo/index.less
+++ b/carp-ui/src/pages/Workspace/X6/dag-demo/index.less
@@ -58,41 +58,11 @@ body {
         width: 100%;
         height: calc(100% - 42px);
 
-        .scaleToolbar {
-          position: absolute;
-          right: 24px;
-          top: 24px;
-        }
-
-        .minimap {
+        .controlTool {
           position: absolute;
           right: 24px;
           bottom: 24px;
         }
-      }
-    }
-
-    .content {
-      display: flex;
-      height: calc(100% - 80px);
-      box-shadow: 0 12px 5px -10px rgba(0, 0, 0, 0.1), 0 0 4px 0 rgba(0, 0, 0, 0.1);
-
-      .json-code {
-        width: 400px;
-        flex-shrink: 0;
-        height: 100%;
-        overflow: auto;
-        border-left: 1px solid #ccc;
-
-        pre {
-          margin: 0;
-        }
-      }
-    }
-
-    :global {
-      button {
-        color: #000;
       }
     }
   }
